<resources>
    <string name="app_name">Calculator</string>
    <string name="simple">Simple</string>
    <string name="scientific">Scientific</string>
    <string name="about">About me</string>
    <string name="quit">Quit</string>

    <string name="hint">Enter a number</string>
    <string name="hint2">Calculation will be here</string>

    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="change">±</string>

    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="modulo">mod</string>

    <string name="percent">%</string>
    <string name="sinus">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>
    <string name="natural_log">ln</string>
    <string name="log">log</string>
    <string name="square">^2</string>
    <string name="power">^</string>
    <string name="square_root">sqrt</string>

    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="aboutText">This app was created by\nAneta Kilar</string>
</resources>