<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScience"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/scientific"
        android:backgroundTint="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnSimple" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSimple"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/simple"
        android:backgroundTint="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/btnScience"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/about"
        android:backgroundTint="@color/secondary_200"
        app:layout_constraintBottom_toTopOf="@+id/btnQuit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScience" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:autoSizeTextType="none"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/btnSimple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>